--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: cpp
 compiler: g++
-script: cd tests && g++ main.cpp -std=c++14
+script: cd tests && g++ main.cpp
 install: export CXX="g++-5"
 addons:
   apt:
