--- a/.travis.yml
+++ b/.travis.yml
@@ -47,15 +47,15 @@ matrix:
   - os: osx
     osx_image: xcode8
     env:
-    - MATRIX_EVAL="brew install gcc5 && CC=gcc-5 && CXX=g++-5"
+    - MATRIX_EVAL="brew update && brew install gcc5 && CC=gcc-5 && CXX=g++-5"
   - os: osx
     osx_image: xcode8
     env:
-    - MATRIX_EVAL="brew install gcc6 && CC=gcc-6 && CXX=g++-6"
+    - MATRIX_EVAL="brew update && brew install gcc6 && CC=gcc-6 && CXX=g++-6"
   - os: osx
     osx_image: xcode8
     env:
-    - MATRIX_EVAL="brew install gcc && CC=gcc-7 && CXX=g++-7"
+    - MATRIX_EVAL="brew update && brew install gcc && CC=gcc-7 && CXX=g++-7"
   - os: linux
     addons:
       apt:
@@ -113,6 +113,7 @@ matrix:
         - clang-5.0
     env:
     - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
+
 before_install:
 - eval "${MATRIX_EVAL}"
 notifications:
