--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ compiler: g++
 script: cd tests && g++ main.cpp -std=c++11
 matrix:
   include:
+  #Linux GCC OLD
   - os: linux
     addons:
       apt:
@@ -13,24 +14,7 @@ matrix:
         - g++-4.9
     env:
     - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - g++-5
-    env:
-    - MATRIX_EVAL="CC=gcc-5 && CXX=g++-5"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        packages:
-        - g++-6
-    env:
-    - MATRIX_EVAL="CC=gcc-6 && CXX=g++-6"
+  #Linux GCC LAST
   - os: linux
     addons:
       apt:
@@ -40,22 +24,17 @@ matrix:
         - g++-7
     env:
     - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
+  #OSX XCODE OLD
   - os: osx
     osx_image: xcode8
     env:
     - MATRIX_EVAL="CC=gcc-4.9 && CXX=g++-4.9"
-  - os: osx
-    osx_image: xcode8
-    env:
-    - MATRIX_EVAL="brew update && brew install gcc5 && CC=gcc-5 && CXX=g++-5"
-  - os: osx
-    osx_image: xcode8
-    env:
-    - MATRIX_EVAL="brew update && brew install gcc6 && CC=gcc-6 && CXX=g++-6"
+  #OSX XCODE LAST
   - os: osx
     osx_image: xcode8
     env:
     - MATRIX_EVAL="brew update && brew install gcc && CC=gcc-7 && CXX=g++-7"
+  #Linux Clang OLD
   - os: linux
     addons:
       apt:
@@ -66,44 +45,7 @@ matrix:
         - clang-3.6
     env:
     - MATRIX_EVAL="CC=clang-3.6 && CXX=clang++-3.6"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        - llvm-toolchain-precise-3.7
-        packages:
-        - clang-3.7
-    env:
-    - MATRIX_EVAL="CC=clang-3.7 && CXX=clang++-3.7"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - ubuntu-toolchain-r-test
-        - llvm-toolchain-precise-3.8
-        packages:
-        - clang-3.8
-    env:
-    - MATRIX_EVAL="CC=clang-3.8 && CXX=clang++-3.8"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - llvm-toolchain-trusty-3.9
-        packages:
-        - clang-3.9
-    env:
-    - MATRIX_EVAL="CC=clang-3.9 && CXX=clang++-3.9"
-  - os: linux
-    addons:
-      apt:
-        sources:
-        - llvm-toolchain-trusty-4.0
-        packages:
-        - clang-4.0
-    env:
-    - MATRIX_EVAL="CC=clang-4.0 && CXX=clang++-4.0"
+  #Linux Clang Last
   - os: linux
     addons:
       apt:
