--- a/.travis.yml
+++ b/.travis.yml
@@ -54,8 +54,7 @@ matrix:
         packages:
         - clang-5.0
     env:
-    - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0"
-
+    - MATRIX_EVAL="CC=clang-5.0 && CXX=clang++-5.0
 before_install:
 - eval "${MATRIX_EVAL}"
 notifications:
