--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: cpp
 compiler: g++
-script: cd tests && g++ main.cpp -std=c++11
+script: mkdir build && cd build && cmake -G .. && cmake --build .
 matrix:
   include:
   #Linux GCC OLD
