--- a/CMakelists.txt
+++ b/CMakelists.txt
@@ -2,6 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project (nexusZiaApi)
 set (CMAKE_CXX_STANDARD 11)
 include_directories(src/)
+include_directories(examples/)
 
 set(SOURCE_FILES tests/main.cpp tests/zia_fake.cpp examples/modules/LogEmail/LogEmail.cpp)
 
