--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: cpp
 compiler: g++
-script: cmake . && cmake --build .
+script: ls && cmake . && cmake --build .
 matrix:
   include:
   #Linux GCC OLD
