ZiaFakeAndNewHook(fix): Add M to CMakelist (error case)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: cpp
 compiler: g++
-script: ls && cmake . && cmake --build .
+script: mkdir build && cd build && cmake .. && cmake --build .
 matrix:
   include:
   #Linux GCC OLD
