ZiaFakeAndNewHook(feat): Adding functional module for example purpose

--- a/examples/modules/LogEmail/CMakeLists.txt
+++ b/examples/modules/LogEmail/CMakeLists.txt
@@ -4,6 +4,8 @@ project(LogEmail)
 set(CMAKE_MACOSX_RPATH 1)
 
 set (CMAKE_CXX_STANDARD 11)
+set (CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/)
+set (OUTPUT_DI)
 
 include_directories (../../../src/)
 
