ZiaFakeAndNewHook(fix): Fix appveyor build (not link lib dll loader)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,4 +7,7 @@ set(SOURCE_FILES tests/main.cpp tests/zia_fake.cpp)
 
 set(SOURCES ${SOURCE_FILES})
 add_executable(nexusZiaApi ${SOURCES})
+
+if (UNIX)
 target_link_libraries(nexusZiaApi dl)
+endif (UNIX)
