CIMacos(feat): Re add macos build

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,11 +24,11 @@ matrix:
         - g++-7
     env:
     - MATRIX_EVAL="CC=gcc-7 && CXX=g++-7"
-  #OSX
- # - os: osx
- #   osx_image: xcode8.3
- #  env:
- #   - MATRIX_EVAL="brew update && brew install gcc && CC=gcc && CXX=g++"
+ #OSX
+  - os: osx
+    osx_image: xcode8.3
+    env:
+    - MATRIX_EVAL="brew update && brew install gcc && CC=gcc && CXX=g++"
   #Linux Clang OLD
   - os: linux
     addons:
