--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,4 +6,4 @@ build_script:
   - cmake -G "Visual Studio 14 2015 Win64" ..
   - cmake --build . --config Release
 test_script:
-  - ./nexusZiaApi
+  - nexusZiaApi.exe
