CIRunExample(fix): Build Teavis (fix cmd build)

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: trusty
 language: cpp
 compiler: g++
-script: mkdir build && cd build && cmake .. && cmake --build . ; if [[ $TRAVIS_OS_NAME == 'linux' ]]; then cd .. && mkdir examples/modules/LogEmail/build && cd examples/modules/LogEmail/build && cmake .. && cmake --build . cd ../../..; fi && cd .. && ./nexusZiaApi
+script: mkdir build && cd build && cmake .. && cmake --build . ; if [[ $TRAVIS_OS_NAME == 'linux' ]]; then cd .. && mkdir examples/modules/LogEmail/build && cd examples/modules/LogEmail/build && cmake .. && cmake --build . && cd ../../..; fi ; cd .. && ./nexusZiaApi
 matrix:
   include:
   #Linux GCC OLD
